# XComRE

./: .gitignore  Game_Files  README.md  XCOM  install.sh  pyproject.toml  requirements-dev.txt  requirements.txt
xcomre/: __init__.py  __main__.py  xcomre.conf  xcomre.ui
