[tool.poetry]
name = "XComRE"
version = "0.1.0"
description = "A simple GUI for editing X-COM: UFO Defense (UFO: Enemy Unknown) save games."
authors = ["Michael John <michael.john@gmx.at>"]
readme = "README.md"
license = "GPL"
packages = [{include = "xcomre"}]
include = ["CHANGELOG.md", "README.md", "xcomre.ui", "xcomre.ico"]

[tool.poetry.scripts]
xcomre = 'xcomre.__main__:main'
xcomre-gui = 'xcomre.__main__:main'

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
# pyside6 = "^6.4.2"
pyside6-essentials = "^6.4.2"
pandas = "^2.2.1"
numpy = "^1.26.4"
urllib3 = "^2.2.1"
tabulate = "^0.9.0"

[tool.poetry.dev-dependencies]
#pyside6 = ">=6.2"
pyside6 = "^6.4.2"
pandas = "^2.2.1"
numpy = "^1.26.4"
urllib3 = "^2.2.1"
tabulate = "^0.9.0"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
homepage = "https://github.com/amstelchen/XComRE"
repository = "https://github.com/amstelchen/XComRE"
documentation = "https://github.com/amstelchen/XComRE"
